docs/api/qiskit/0.39/qiskit.circuit.library.TwoLocal.mdx
---
title: TwoLocal
description: API reference for qiskit.circuit.library.TwoLocal
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.TwoLocal
---

# TwoLocal

<Class id="qiskit.circuit.library.TwoLocal" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/circuit/library/n_local/two_local.py" signature="TwoLocal(num_qubits=None, rotation_blocks=None, entanglement_blocks=None, entanglement='full', reps=3, skip_unentangled_qubits=False, skip_final_rotation_layer=False, parameter_prefix='θ', insert_barriers=False, initial_state=None, name='TwoLocal')">
  Bases: [`qiskit.circuit.library.n_local.n_local.NLocal`](qiskit.circuit.library.NLocal "qiskit.circuit.library.n_local.n_local.NLocal")

  The two-local circuit.

  The two-local circuit is a parameterized circuit consisting of alternating rotation layers and entanglement layers. The rotation layers are single qubit gates applied on all qubits. The entanglement layer uses two-qubit gates to entangle the qubits according to a strategy set using `entanglement`. Both the rotation and entanglement gates can be specified as string (e.g. `'ry'` or `'cx'`), as gate-type (e.g. `RYGate` or `CXGate`) or as QuantumCircuit (e.g. a 1-qubit circuit or 2-qubit circuit).

  A set of default entanglement strategies is provided:

  *   `'full'` entanglement is each qubit is entangled with all the others.
  *   `'linear'` entanglement is qubit $i$ entangled with qubit $i + 1$, for all $i \in \{0, 1, ... , n - 2\}$, where $n$ is the total number of qubits.
  *   `'reverse_linear'` entanglement is qubit $i$ entangled with qubit $i + 1$, for all $i \in \{n-2, n-3, ... , 1, 0\}$, where $n$ is the total number of qubits. Note that if `entanglement_blocks = 'cx'` then this option provides the same unitary as `'full'` with fewer entangling gates.
  *   `'pairwise'` entanglement is one layer where qubit $i$ is entangled with qubit $i + 1$, for all even values of $i$, and then a second layer where qubit $i$ is entangled with qubit $i + 1$, for all odd values of $i$.
  *   `'circular'` entanglement is linear entanglement but with an additional entanglement of the first and last qubit before the linear part.
  *   `'sca'` (shifted-circular-alternating) entanglement is a generalized and modified version of the proposed circuit 14 in [Sim et al.](https://arxiv.org/abs/1905.10876). It consists of circular entanglement where the ‘long’ entanglement connecting the first with the last qubit is shifted by one each block. Furthermore the role of control and target qubits are swapped every block (therefore alternating).

  The entanglement can further be specified using an entangler map, which is a list of index pairs, such as

  ```python
  >>> entangler_map = [(0, 1), (1, 2), (2, 0)]
  ```

  If different entanglements per block should be used, provide a list of entangler maps. See the examples below on how this can be used.

  ```python
  >>> entanglement = [entangler_map_layer_1, entangler_map_layer_2, ... ]
  ```

  Barriers can be inserted in between the different layers for better visualization using the `insert_barriers` attribute.

  For each parameterized gate a new parameter is generated using a `ParameterVector`. The name of these parameters can be chosen using the `parameter_prefix`.

  **Examples**

  ```python
  >>> two = TwoLocal(3, 'ry', 'cx', 'linear', reps=2, insert_barriers=True)
  >>> print(two)  # decompose the layers into standard gates
       ┌──────────┐ ░            ░ ┌──────────┐ ░            ░ ┌──────────┐
  q_0: ┤ Ry(θ[0]) ├─░───■────────░─┤ Ry(θ[3]) ├─░───■────────░─┤ Ry(θ[6]) ├
       ├──────────┤ ░ ┌─┴─┐      ░ ├──────────┤ ░ ┌─┴─┐      ░ ├──────────┤
  q_1: ┤ Ry(θ[1]) ├─░─┤ X ├──■───░─┤ Ry(θ[4]) ├─░─┤ X ├──■───░─┤ Ry(θ[7]) ├
       ├──────────┤ ░ └───┘┌─┴─┐ ░ ├──────────┤ ░ └───┘┌─┴─┐ ░ ├──────────┤
  q_2: ┤ Ry(θ[2]) ├─░──────┤ X ├─░─┤ Ry(θ[5]) ├─░──────┤ X ├─░─┤ Ry(θ[8]) ├
       └──────────┘ ░      └───┘ ░ └──────────┘ ░      └───┘ ░ └──────────┘
  ```

  ```python
  >>> two = TwoLocal(3, ['ry','rz'], 'cz', 'full', reps=1, insert_barriers=True)
  >>> qc = QuantumCircuit(3)
  >>> qc += two
  >>> print(qc.decompose().draw())
       ┌──────────┐┌──────────┐ ░           ░ ┌──────────┐ ┌──────────┐
  q_0: ┤ Ry(θ[0]) ├┤ Rz(θ[3]) ├─░──■──■─────░─┤ Ry(θ[6]) ├─┤ Rz(θ[9]) ├
       ├──────────┤├──────────┤ ░  │  │     ░ ├──────────┤┌┴──────────┤
  q_1: ┤ Ry(θ[1]) ├┤ Rz(θ[4]) ├─░──■──┼──■──░─┤ Ry(θ[7]) ├┤ Rz(θ[10]) ├
       ├──────────┤├──────────┤ ░     │  │  ░ ├──────────┤├───────────┤
  q_2: ┤ Ry(θ[2]) ├┤ Rz(θ[5]) ├─░─────■──■──░─┤ Ry(θ[8]) ├┤ Rz(θ[11]) ├
       └──────────┘└──────────┘ ░           ░ └──────────┘└───────────┘
  ```

  ```python
  >>> entangler_map = [[0, 1], [1, 2], [2, 0]]  # circular entanglement for 3 qubits
  >>> two = TwoLocal(3, 'x', 'crx', entangler_map, reps=1)
  >>> print(two)  # note: no barriers inserted this time!
          ┌───┐                             ┌──────────┐┌───┐
  q_0: |0>┤ X ├─────■───────────────────────┤ Rx(θ[2]) ├┤ X ├
          ├───┤┌────┴─────┐            ┌───┐└─────┬────┘└───┘
  q_1: |0>┤ X ├┤ Rx(θ[0]) ├─────■──────┤ X ├──────┼──────────
          ├───┤└──────────┘┌────┴─────┐└───┘      │     ┌───┐
  q_2: |0>┤ X ├────────────┤ Rx(θ[1]) ├───────────■─────┤ X ├
          └───┘            └──────────┘                 └───┘
  ```

  ```python
  >>> entangler_map = [[0, 3], [0, 2]]  # entangle the first and last two-way
  >>> two = TwoLocal(4, [], 'cry', entangler_map, reps=1)
  >>> circuit = two + two
  >>> print(circuit.decompose().draw())  # note, that the parameters are the same!
  q_0: ─────■───────────■───────────■───────────■──────
            │           │           │           │
  q_1: ─────┼───────────┼───────────┼───────────┼──────
            │      ┌────┴─────┐     │      ┌────┴─────┐
  q_2: ─────┼──────┤ Ry(θ[1]) ├─────┼──────┤ Ry(θ[1]) ├
       ┌────┴─────┐└──────────┘┌────┴─────┐└──────────┘
  q_3: ┤ Ry(θ[0]) ├────────────┤ Ry(θ[0]) ├────────────
       └──────────┘            └─────────
  ```

  ```python
  >>> layer_1 = [(0, 1), (0, 2)]
  >>> layer_2 = [(1, 2)]
  >>> two = TwoLocal(3, 'x', 'cx', [layer_1, layer_2], reps=2, insert_barriers=True)
  >>> print(two)
       ┌───┐ ░            ░ ┌───┐ ░       ░ ┌───┐
  q_0: ┤ X ├─░───■────■───░─┤ X ├─░───────░─┤ X ├
       ├───┤ ░ ┌─┴─┐  │   ░ ├───┤ ░       ░ ├───┤
  q_1: ┤ X ├─░─┤ X ├──┼───░─┤ X ├─░───■───░─┤ X ├
       ├───┤ ░ └───┘┌─┴─┐ ░ ├───┤ ░ ┌─┴─┐ ░ ├───┤
  q_2: ┤ X ├─░──────┤ X ├─░─┤ X ├─░─┤ X ├─░─┤ X ├
       └───┘ ░      └───┘ ░ └───┘ ░ └───┘ ░ └───┘
  ```

  Construct a new two-local circuit.

  **Parameters**

  *   **num\_qubits** (`Optional`\[`int`]) – The number of qubits of the two-local circuit.
  *   **rotation\_blocks** (`Union`\[`str`, `List`\[`str`], `type`, `List`\[`type`], [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")], `None`]) – The gates used in the rotation layer. Can be specified via the name of a gate (e.g. ‘ry’) or the gate type itself (e.g. RYGate). If only one gate is provided, the gate same gate is applied to each qubit. If a list of gates is provided, all gates are applied to each qubit in the provided order. See the Examples section for more detail.
  *   **entanglement\_blocks** (`Union`\[`str`, `List`\[`str`], `type`, `List`\[`type`], [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), `List`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")], `None`]) – The gates used in the entanglement layer. Can be specified in the same format as rotation\_blocks.
  *   **entanglement** (`Union`\[`str`, `List`\[`List`\[`int`]], `Callable`\[\[`int`], `List`\[`int`]]]) – Specifies the entanglement structure. Can be a string (‘full’, ‘linear’ , ‘reverse\_linear, ‘circular’ or ‘sca’), a list of integer-pairs specifying the indices of qubits entangled with one another, or a callable returning such a list provided with the index of the entanglement layer. Default to ‘full’ entanglement. Note that if `entanglement_blocks = 'cx'`, then `'full'` entanglement provides the same unitary as `'reverse_linear'` but the latter option has fewer entangling gates. See the Examples section for more detail.
  *   **reps** (`int`) – Specifies how often a block consisting of a rotation layer and entanglement layer is repeated.
  *   **skip\_unentangled\_qubits** (`bool`) – If True, the single qubit gates are only applied to qubits that are entangled with another qubit. If False, the single qubit gates are applied to each qubit in the Ansatz. Defaults to False.
  *   **skip\_final\_rotation\_layer** (`bool`) – If False, a rotation layer is added at the end of the ansatz. If True, no rotation layer is added.
  *   **parameter\_prefix** (`str`) – The parameterized gates require a parameter to be defined, for which we use instances of qiskit.circuit.Parameter. The name of each parameter will be this specified prefix plus its index.
  *   **insert\_barriers** (`bool`) – If True, barriers are inserted in between each layer. If False, no barriers are inserted. Defaults to False.
  *   **initial\_state** (`Optional`\[`Any`]) – A QuantumCircuit object to prepend to the circuit.

  ## Methods Defined Here

  ### get\_entangler\_map

  <Function id="qiskit.circuit.library.TwoLocal.get_entangler_map" name="get_entangler_map" signature="TwoLocal.get_entangler_map(rep_num, block_num, num_block_qubits)">
    Overloading to handle the special case of 1 qubit where the entanglement are ignored.

    **Return type**

    `List`\[`List`\[`int`]]
  </Function>

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.TwoLocal.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.

    **Return type**

    `List`\[[`AncillaQubit`](qiskit.circuit.AncillaQubit "qiskit.circuit.quantumregister.AncillaQubit")]
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.TwoLocal.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}

    **Return type**

    `dict`
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.TwoLocal.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.TwoLocal.data" name="data" />

  ### entanglement

  <Attribute id="qiskit.circuit.library.TwoLocal.entanglement" name="entanglement">
    Get the entanglement strategy.

    **Return type**

    `Union`\[`str`, `List`\[`str`], `List`\[`List`\[`str`]], `List`\[`int`], `List`\[`List`\[`int`]], `List`\[`List`\[`List`\[`int`]]], `List`\[`List`\[`List`\[`List`\[`int`]]]], `Callable`\[\[`int`], `str`], `Callable`\[\[`int`], `List`\[`List`\[`int`]]]]

    **Returns**

    The entanglement strategy, see [`get_entangler_map()`](qiskit.circuit.library.TwoLocal#get_entangler_map "qiskit.circuit.library.TwoLocal.get_entangler_map") for more detail on how the format is interpreted.
  </Attribute>

  ### entanglement\_blocks

  <Attribute id="qiskit.circuit.library.TwoLocal.entanglement_blocks" name="entanglement_blocks">
    The blocks in the entanglement layers.

    **Return type**

    `List`\[[`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")]

    **Returns**

    The blocks in the entanglement layers.
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.TwoLocal.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.TwoLocal.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.

    **Return type**

    `Union`\[[`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `float`]
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.TwoLocal.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### initial\_state

  <Attribute id="qiskit.circuit.library.TwoLocal.initial_state" name="initial_state">
    Return the initial state that is added in front of the n-local circuit.

    **Return type**

    `Any`

    **Returns**

    The initial state.
  </Attribute>

  ### insert\_barriers

  <Attribute id="qiskit.circuit.library.TwoLocal.insert_barriers" name="insert_barriers">
    If barriers are inserted in between the layers or not.

    **Return type**

    `bool`

    **Returns**

    True, if barriers are inserted in between the layers, False if not.
  </Attribute>

  ### instances

  <Attribute id="qiskit.circuit.library.TwoLocal.instances" name="instances" attributeValue="= 94" />

  ### metadata

  <Attribute id="qiskit.circuit.library.TwoLocal.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.

    **Return type**

    `dict`
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.TwoLocal.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.

    **Return type**

    `int`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.TwoLocal.num_clbits" name="num_clbits">
    Return number of classical bits.

    **Return type**

    `int`
  </Attribute>

  ### num\_layers

  <Attribute id="qiskit.circuit.library.TwoLocal.num_layers" name="num_layers">
    Return the number of layers in the n-local circuit.

    **Return type**

    `int`

    **Returns**

    The number of layers in the circuit.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.TwoLocal.num_parameters" name="num_parameters">
    **Return type**

    `int`
  </Attribute>

  ### num\_parameters\_settable

  <Attribute id="qiskit.circuit.library.TwoLocal.num_parameters_settable" name="num_parameters_settable">
    The number of total parameters that can be set to distinct values.

    This does not change when the parameters are bound or exchanged for same parameters, and therefore is different from `num_parameters` which counts the number of unique [`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.Parameter") objects currently in the circuit.

    **Return type**

    `int`

    **Returns**

    The number of parameters originally available in the circuit.

    <Admonition title="Note" type="note">
      This quantity does not require the circuit to be built yet.
    </Admonition>
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.TwoLocal.num_qubits" name="num_qubits">
    Returns the number of qubits in this circuit.

    **Return type**

    `int`

    **Returns**

    The number of qubits.
  </Attribute>

  ### op\_start\_times

  <Attribute id="qiskit.circuit.library.TwoLocal.op_start_times" name="op_start_times">
    Return a list of operation start times.

    This attribute is enabled once one of scheduling analysis passes runs on the quantum circuit.

    **Return type**

    `List`\[`int`]

    **Returns**

    List of integers representing instruction start times. The index corresponds to the index of instruction in `QuantumCircuit.data`.

    **Raises**

    **AttributeError** – When circuit is not scheduled.
  </Attribute>

  ### ordered\_parameters

  <Attribute id="qiskit.circuit.library.TwoLocal.ordered_parameters" name="ordered_parameters">
    The parameters used in the underlying circuit.

    This includes float values and duplicates.

    **Examples**

    ```python
    >>> # prepare circuit ...
    >>> print(nlocal)
         ┌───────┐┌──────────┐┌──────────┐┌──────────┐
    q_0: ┤ Ry(1) ├┤ Ry(θ[1]) ├┤ Ry(θ[1]) ├┤ Ry(θ[3]) ├
         └───────┘└──────────┘└──────────┘└──────────┘
    >>> nlocal.parameters
    {Parameter(θ[1]), Parameter(θ[3])}
    >>> nlocal.ordered_parameters
    [1, Parameter(θ[1]), Parameter(θ[1]), Parameter(θ[3])]
    ```

    **Return type**

    `List`\[[`Parameter`](qiskit.circuit.Parameter "qiskit.circuit.parameter.Parameter")]

    **Returns**

    The parameters objects used in the circuit.
  </Attribute>

  ### parameter\_bounds

  <Attribute id="qiskit.circuit.library.TwoLocal.parameter_bounds" name="parameter_bounds">
    The parameter bounds for the unbound parameters in the circuit.

    **Return type**

    `Optional`\[`List`\[`Tuple`\[`float`, `float`]]]

    **Returns**

    A list of pairs indicating the bounds, as (lower, upper). None indicates an unbounded parameter in the corresponding direction. If None is returned, problem is fully unbounded.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.TwoLocal.parameters" name="parameters">
    **Return type**

    `ParameterView`
  </Attribute>

  ### preferred\_init\_points

  <Attribute id="qiskit.circuit.library.TwoLocal.preferred_init_points" name="preferred_init_points">
    The initial points for the parameters. Can be stored as initial guess in optimization.

    **Return type**

    `Optional`\[`List`\[`float`]]

    **Returns**

    The initial values for the parameters, or None, if none have been set.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.TwoLocal.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qregs

  <Attribute id="qiskit.circuit.library.TwoLocal.qregs" name="qregs">
    A list of the quantum registers associated with the circuit.
  </Attribute>

  ### qubits

  <Attribute id="qiskit.circuit.library.TwoLocal.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.

    **Return type**

    `List`\[[`Qubit`](qiskit.circuit.Qubit "qiskit.circuit.quantumregister.Qubit")]
  </Attribute>

  ### reps

  <Attribute id="qiskit.circuit.library.TwoLocal.reps" name="reps">
    The number of times rotation and entanglement block are repeated.

    **Return type**

    `int`

    **Returns**

    The number of repetitions.
  </Attribute>

  ### rotation\_blocks

  <Attribute id="qiskit.circuit.library.TwoLocal.rotation_blocks" name="rotation_blocks">
    The blocks in the rotation layers.

    **Return type**

    `List`\[[`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")]

    **Returns**

    The blocks in the rotation layers.
  </Attribute>
</Class>

